Fix sidebar wrapping

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -242,6 +242,7 @@
     }
   }
   a {
+    white-space: nowrap;
     font-size: 16px;
     &:hover {
       text-decoration: none;
